--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,13 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: gadgets_test
 
 production:
   <<: *default
   database: gadgets_production
+
+cucumber:
+  <<: *test
