user can upload many images of his gadgets

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 # removed from repository for security (saved as encrypted file on semaphore)
 /config/initializers/secret_token.rb
 
+/public/system/photos/**/*
+
 
 
 
